<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context="com.tech.sungkim.bemo.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="1"
                android:textSize="20sp"

                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="18dp">

                <TextView
                    style="@style/Infoheadstyle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inf_txt_1_head" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Infodetailstyle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/info_txt_1" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="18dp">

                <TextView
                    style="@style/Infoheadstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inf_txt_2_head" />

                <TextView
                    style="@style/Infodetailstyle"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_txt_2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingLeft="18dp">

                <TextView
                    style="@style/Infoheadstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inf_txt_3_head" />

                <TextView
                    style="@style/Infodetailstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/info_txt_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingTop="24dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="4"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="18dp">

                <TextView
                    style="@style/Infoheadstyle"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inf_txt_4_head" />

                <TextView
                    style="@style/Infodetailstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_txt_4" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
