<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="3dp"
    card_view:contentPaddingLeft="15dp"
    card_view:contentPaddingRight="15dp"
    card_view:contentPaddingBottom="10dp"
    card_view:contentPaddingTop="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#FFF">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/friends_icon"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email_login"
                android:text="jac@gmail.com"
                android:hint="@string/email_hint"
                android:lines="1"
                android:textColorHint="#797979"
                android:textColor="#000"
                android:theme="@style/EditTextCustom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/friends_icon"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:id="@+id/password_login"
                android:text="123456"
                android:hint="@string/password_hint"
                android:lines="1"
                android:textColorHint="#797979"
                android:textColor="#000"
                android:theme="@style/EditTextCustom"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/button_login"
            android:background="#1ac76a"
            android:singleLine="false"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_haveaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textColorLink="@color/green_dark"
            android:textSize="14sp"
            android:gravity="center"/>
    </LinearLayout>

</android.support.v7.widget.CardView>